Issue 510: fix scrollbar tabs

--- a/js-packages/search-frontend/src/app.css
+++ b/js-packages/search-frontend/src/app.css
@@ -53,3 +53,7 @@
   clip-path: inset(50%); 
   white-space: nowrap; 
   }
+
+  .os-theme-dark.os-host-transition > .os-scrollbar > .os-scrollbar-track > .os-scrollbar-handle {
+    display: none !important;
+  }
